--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Heratness Foundation</title>
+		<title>Heratness Foundation 1234</title>
 
 		
 		<!-- WEB FONTS -->
@@ -26,7 +26,7 @@
     <style type="text/css">
     .h1 {
                 
-                font-size: 100px;
+                font-size: 150px;
                 color:white;
                 
                 font-weight: bold;
