--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<!-- WEB FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,400,300italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-		
-		<!-- BOOTSTRAP -->
+		<!-- no comments-->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<!-- FONT AWESOME -->
 		<link rel="stylesheet" href="css/font-awesome.min.css">
